--- a/SmartStock/Views/Home/HomePage.cshtml
+++ b/SmartStock/Views/Home/HomePage.cshtml
@@ -5,7 +5,7 @@
 
 <style>
     body {
-        background-color: lightgray
+        background-color: lightgray;
     }
 
 
@@ -15,7 +15,22 @@
 
 
     .login {
-        text-align: center
+        text-align: center;
+        padding-top: 150px;
+        padding-bottom: 120px
+    }
+
+    .submit {
+        padding-bottom: 30px;
+        background-color: black;
+        color: white;
+        width: 200px;
+        text-align: center;
+        font-size: 20px
+    }
+
+    h1 {
+        padding: 50px
     }
 
     
@@ -37,7 +52,7 @@
         Password : <input type="text"><br>
     </fieldset>
 
-    <button class="submit"></button>                            <!--This button requires back-end before we can actually use it-->
+    <div><button class="submit" type="submit">Log In</button></div>                            <!--This button may require back-end before we can actually use it-->
 
     <a href="login">Don't have an account? Sign up today.</a>   <!--This link does nothing right now-->
 </div>
