--- a/SmartStock/Views/Home/HomePage.cshtml
+++ b/SmartStock/Views/Home/HomePage.cshtml
@@ -1,60 +1,26 @@
 ﻿
 @{
-    ViewBag.Title = "homepage";
+	ViewBag.Title = "homepage";
 }
 
-<style>
-    body {
-        background-color: lightgray;
-    }
+<div class="login">
+	<!--A class for the login page.-->
 
+	<h1>SmartStock</h1>
+	<!--Title and subtitles-->
+	<p>~Smart Savings Start with SmartStock~</p>
+	<p>Log in and Start Saving Today</p>
 
-    .credentials {
-        padding: 30px
-    }
+	<fieldset class="credentials">
+		<!--fieldset for user credentials.-->
+		UserName: <input type="text"><br>
+		<br />
+		Password : <input type="text"><br>
+	</fieldset>
 
+	<div><button class="submit" type="submit">Log In</button></div>     <!--This button may require back-end before we can actually use it-->
 
-    .login {
-        text-align: center;
-        padding-top: 150px;
-        padding-bottom: 120px
-    }
-
-    .submit {
-        padding-bottom: 30px;
-        background-color: black;
-        color: white;
-        width: 200px;
-        text-align: center;
-        font-size: 20px
-    }
-
-    h1 {
-        padding: 50px
-    }
-
-    
-</style>
-
-
-
-
-<div class="login">                                                     <!--A class for the login page.-->
-
-    <h1>SmartStock</h1>                 
-                                                                        <!--Title and subtitles-->
-    <p>~Smart Savings Start with SmartStock~</p>
-    <p>Log in and Start Saving Today</p>
-
-    <fieldset class="credentials">                                      <!--fieldset for user credentials.-->
-        UserName: <input type="text"><br>
-        <br />
-        Password : <input type="text"><br>
-    </fieldset>
-
-    <div><button class="submit" type="submit">Log In</button></div>     <!--This button may require back-end before we can actually use it-->
-
-    <a href="login">Don't have an account? Sign up today.</a>           <!--This link does nothing right now-->
+	<a href="login">Don't have an account? Sign up today.</a>           <!--This link does nothing right now-->
 </div>
 
 
