--- a/SmartStock/Views/Shared/_Layout.cshtml
+++ b/SmartStock/Views/Shared/_Layout.cshtml
@@ -1,42 +1,28 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+	<meta name="viewport" content="width=device-width" />
+	<title>@ViewBag.Title</title>
+	@Scripts.Render("~/bundles/jquery")
+	<script src="https://kit.fontawesome.com/cd44621082.js" crossorigin="anonymous"></script>
+	@Styles.Render("~/Content/css")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+	<div id="site-header">
+		<i class="fa-solid fa-cubes"></i>
+		<span class="full-content">Smart Stock</span>
+		<span class="mobile-content">Smart Stock</span>
+	</div>
+	<div class="icon-bar">
+		<a id="icon-bar-home" href="~/Home/Index" title="Go to Home"><i class="fa fa-home"></i></a>
+		<a id="icon-bar-profile" href="~/Profile/Index" title="Profile"><i class="fas fa-user-circle"></i></a>
+		<a id="icon-bar-users" href="~/Profile/Users" title="Users"><i class="fa-solid fa-users"></i></a>
+		<a id="icon-bar-inventory" href="~/Profile/Inventory" title="Inventory"><i class="fa-solid fa-boxes-stacked"></i></a>
+		<a id="icon-bar-suppliers" href="~/Profile/Suppliers" title="Suppliers"><i class="fa-solid fa-truck"></i></a>
+		<a id="icon-bar-signout" href="~/Profile/SignOut" title="Sign Out"><i class="fas fa-sign-out-alt"></i></a>
+	</div>
+	<div id="workspace">
+		@RenderBody()
+	</div>
 </body>
 </html>
