--- a/SmartStock/Content/Site.css
+++ b/SmartStock/Content/Site.css
@@ -166,7 +166,7 @@ button i {
         padding-bottom: 120px
     }
 
-    .submit {
+    homepage.submit {
         padding-bottom: 30px;
         background-color: black;
         color: white;
