add SignUp skeleton

--- a/SmartStock/Views/Home/HomePage.cshtml
+++ b/SmartStock/Views/Home/HomePage.cshtml
@@ -23,7 +23,7 @@
 
     <div><button class="submit" type="submit">Log In</button></div>     <!--This button may require back-end before we can actually use it-->
 
-    <a href="login">Don't have an account? Sign up today.</a>           <!--This link does nothing right now-->
+    <a href="SignUp">Don't have an account? Sign up today.</a>           <!--This link does nothing right now-->
 </div>
 
 
