add inv. init, bridge links, add signup

--- a/SmartStock/Views/Home/HomePage.cshtml
+++ b/SmartStock/Views/Home/HomePage.cshtml
@@ -18,12 +18,11 @@
         <div class="item">
             <div>@Html.LabelFor(Model => Model.Password)</div>
             <div>@Html.TextBoxFor(Model => Model.Password, new { type = "password" })</div>
-            </div>
         </div>
 
     <div><button class="submit" type="submit">Log In</button></div>     <!--This button may require back-end before we can actually use it-->
 
-    <a href="SignUp">Don't have an account? Sign up today.</a>           <!--This link does nothing right now-->
+    <a href="SignUp">Don't have an account? Sign up today.</a>         
 </div>
 
 
