--- a/SmartStock/Views/Home/SignUp.cshtml
+++ b/SmartStock/Views/Home/SignUp.cshtml
@@ -79,9 +79,11 @@
         </div>
     </div>
 
-    <div><button class="submit" type="submit">Submit</button></div>
+    <form action="InitializeInventory">
+        <input type="submit" value="Next" />
+    </form>
 
-    <div><button class="button-cancel" type="cancel">Back to Login</button></div>
+    <a href="HomePage">Back to Login</a>
 
 
 </div>
