add edit supplier skeleton

--- a/SmartStock/Views/Profile/Suppliers.cshtml
+++ b/SmartStock/Views/Profile/Suppliers.cshtml
@@ -30,7 +30,11 @@
             </tr>
         </table>
     </div>
-        
+
+    <!--In practice, we will be able to double click a supplier row to achieve this functionality.-->
+    <form action="EditSupplier">
+        <input type="submit" value="EditSupplier Placeholder" />
+    </form>
 
 </div>
 
