--- a/SmartStock/Views/Profile/EditSupplier.cshtml
+++ b/SmartStock/Views/Profile/EditSupplier.cshtml
@@ -1,11 +1,12 @@
 ﻿
 @{
-    ViewBag.Title = "InitializeSuppliers";
+    ViewBag.Title = "EditSupplier";
 }
 @model SmartStock.Models.Supplier
 
-<h1>InitializeSuppliers</h1>
+<h1>EditSupplier</h1>
 
+<!--In practice, this page will be preloaded with the information of the supplier the user selected.-->
 <div class="item">
     <div>
         @Html.LabelFor(Model => Model.Contact_FirstName)
@@ -62,28 +63,13 @@
     </div>
 </div>
 
-<table>
-    <tr>
-        <th>Company</th>
-        <th>Contact Name</th>
-        <th>Contact Info</th>
-        <th>Address</th>
-        <th>Notes</th>
-    </tr>
-    <tr>
-        <td>Cysco</td>
-        <td>Replace Me</td>
-        <td> 55555555<br />WithActualLogic@gmail.com</td>
-        <td>545 something st.</td>
-        <td>Delivers wings and potatoes</td>
-    </tr>
-</table>
+<div class="item">
+    <div>
+        @Html.LabelFor(Model => Model.Notes)
+        @Html.TextAreaFor(Model => Model.Notes)
+    </div>
+</div>
 
-
-<form action="Dashboard">
-    <input type="submit" value="Complete" />
-</form>
-
-<form action="InitializeInventory">
-    <input type="submit" value="Cancel" />
+<form action="Suppliers">
+    <input type="submit" value="Submit" />
 </form>
