--- a/SmartStock/Views/Home/SignUp.cshtml
+++ b/SmartStock/Views/Home/SignUp.cshtml
@@ -72,6 +72,7 @@
         </div>
     </div>
 
+    <!--Confirm Password-->
     <div class="item">
         <div>
             @Html.LabelFor(Model => Model.Password)
