more initialize views

--- a/SmartStock/Views/Home/InitializeEmployees.cshtml
+++ b/SmartStock/Views/Home/InitializeEmployees.cshtml
@@ -4,7 +4,7 @@
 }
 @model SmartStock.Models.User
 
-<h1>InitializeEmployees</h1>
+<h1>Initialize Employees</h1>
 
 <div class="item">
     <div>
@@ -92,10 +92,10 @@
 </div>
 
 
-<form action="Dashboard">
+<form action="InitializeSuppliers">
     <input type="submit" value="Complete" />
 </form>
 
 <form action="InitializeInventory">
-    <input type="submit" value="Cancel" />
+    <input type="submit" value="Previous" />
 </form>
