--- a/SmartStock/Views/Home/InitializeSuppliers.cshtml
+++ b/SmartStock/Views/Home/InitializeSuppliers.cshtml
@@ -84,6 +84,6 @@
     <input type="submit" value="Complete" />
 </form>
 
-<form action="InitializeInventory">
-    <input type="submit" value="Cancel" />
+<form action="InitializeEmployees">
+    <input type="submit" value="Previous" />
 </form>
