add new item skeleton

--- a/SmartStock/Views/Profile/Inventory.cshtml
+++ b/SmartStock/Views/Profile/Inventory.cshtml
@@ -5,7 +5,7 @@
 <h1>Inventory</h1>
 
 <div class="inventory">
-    <form action="AddItem">
+    <form action="CreateItem">
         <input type="submit" value="+" />
     </form>
 
