--- a/SmartStock/Views/Profile/EditSupplier.cshtml
+++ b/SmartStock/Views/Profile/EditSupplier.cshtml
@@ -73,3 +73,7 @@
 <form action="Suppliers">
     <input type="submit" value="Submit" />
 </form>
+
+<form action="Suppliers">
+    <input type="submit" value="Cancel" />
+</form>
