--- a/SmartStock/Views/Profile/EditUser.cshtml
+++ b/SmartStock/Views/Profile/EditUser.cshtml
@@ -1,11 +1,12 @@
 ﻿
 @{
-    ViewBag.Title = "CreateUser";
+    ViewBag.Title = "EditUser";
 }
 @model SmartStock.Models.User
 
-<h1>Create User</h1>
+<h1>Edit User</h1>
 
+<!--In practice, these fields will be populated with the user to be edited-->
 <div class="item">
     <div>
         @Html.LabelFor(Model => Model.First_Name)
