--- a/SmartStock/Views/Profile/Inventory.cshtml
+++ b/SmartStock/Views/Profile/Inventory.cshtml
@@ -31,7 +31,7 @@
         </table>
     </div>
 
-    <form action="PerformAdjustment">
+    <form action="InventoryAdjustment">
         <input type="submit" value="Perform Adjustment" />
     </form>
 
