--- a/SmartStock/Views/Profile/Suppliers.cshtml
+++ b/SmartStock/Views/Profile/Suppliers.cshtml
@@ -4,10 +4,10 @@
 }
 @model SmartStock.Models.Supplier
 
-<h2>Suppliers</h2>
+<h1>Suppliers</h1>
 
 <div class="suppliers">
-    <form action="AddSupplier">
+    <form action="CreateSupplier">
         <input type="submit" value="+" />
     </form>
 
