--- a/SmartStock/Views/Profile/Users.cshtml
+++ b/SmartStock/Views/Profile/Users.cshtml
@@ -8,7 +8,7 @@
 
     <h1>Users</h1>
 
-    <form action="AddUser">
+    <form action="CreateUser">
         <input type="submit" value="+" />
     </form>
 
@@ -43,6 +43,11 @@
             <option value="employee">Employees</option>
         </select>
     </div>
+
+    <!--In practice, we will be able to double click a user row to achieve this functionality.-->
+    <form action="EditUser">
+        <input type="submit" value="EditUser Placeholder" />
+    </form>
 </div>
 
 
