updated supplier fields

--- a/SmartStock/Views/Profile/EditSupplier.cshtml
+++ b/SmartStock/Views/Profile/EditSupplier.cshtml
@@ -30,8 +30,8 @@
 
 <div class="item">
     <div>
-        @Html.LabelFor(Model => Model.Contact_State_ID)
-        @Html.TextBoxFor(Model => Model.Contact_State_ID)
+        @Html.LabelFor(Model => Model.Contact_State)
+        @Html.TextBoxFor(Model => Model.Contact_State)
     </div>
 </div>
 
