--- a/SmartStock/Views/Profile/CreateSupplier.cshtml
+++ b/SmartStock/Views/Profile/CreateSupplier.cshtml
@@ -28,8 +28,8 @@
 
 <div class="item">
     <div>
-        @Html.LabelFor(Model => Model.Contact_State_ID)
-        @Html.TextBoxFor(Model => Model.Contact_State_ID)
+        @Html.LabelFor(Model => Model.Contact_State)
+        @Html.TextBoxFor(Model => Model.Contact_State)
     </div>
 </div>
 
