--- a/SmartStock/Content/Site.css
+++ b/SmartStock/Content/Site.css
@@ -17,6 +17,12 @@
     color: white;
 }
 
+.login {
+    padding-top: 150px;
+    padding-bottom: 120px;
+    text-align: center;
+}
+
 h2 {
     margin-top: 1.5em;
 }
@@ -28,8 +34,34 @@ h2 {
 
 .icon-bar {
     background-color: #42475d;
+    background-color: #42475d;
     display: table-cell;
     float: left;
+}
+
+.center {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+}
+
+.center-up {
+    position: absolute;
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+}
+
+.table-label {
+    text-align: right;
+}
+
+td {
+    padding-right: 10px;
+    padding-top: 5px;
 }
 
 .icon-bar a {
@@ -67,7 +99,7 @@ p {
 
 .item {
     display: inline;
-    float: left;
+    float: none;
     margin-right: 1.0em;
     margin-bottom: 1.0em;
 }
