--- a/SmartStock/Views/Home/InitializeInventory.cshtml
+++ b/SmartStock/Views/Home/InitializeInventory.cshtml
@@ -1,64 +1,60 @@
-﻿@{
-    ViewBag.Title = "InitializeInventory";
+﻿@model SmartStock.Models.Inventory
+@{
+    ViewBag.Title = "Initialize Inventory";
 }
+<h2>@ViewBag.Title</h2>
+@using (Html.BeginForm(FormMethod.Post))
+{
+<div class="section">
 
-<div class="initializeInventory">
-    <!--A class for the inv. initialization page.-->
-
-    <h1>Initialize Inventory</h1>
-
+    @*<div class="item">
+            <div>
+                @Html.LabelFor(Model => Model.)
+                @Html.TextBoxFor(Model => Model.strProductName)
+            </div>
+        </div>*@
     <div class="item">
-        <form action="initializestock">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name"><br><br>
-
-            <label for="category">Category:</label>
-            <input type="text" id="category" name="category"><br><br>
-
-            <label for="location">Location:</label>
-            <input type="text" id="location" name="location"><br><br>
-
-            <label for="price">Price:</label>
-            <input type="text" id="price" name="price"><br><br>
-
-            <label for="intialStock">Initial Stock:</label>
-            <input type="text" id="initialStock" name="inittialStock"><br><br>
-
-            <label for="unitMeasurement">Unit/Measurement:</label>
-            <input type="text" id="unitMesaurement" name="unitMeasurement"><br><br>
-
-            <label for="supplier">Supplier:</label>
-            <input type="text" id="supplier" name="supplier"><br><br>
-
-        </form>
-
-        <table>
-            <tr>
-                <th>Name</th>
-                <th>Category</th>
-                <th>Location</th>
-                <th>Price</th>
-                <th>Unit/Measurement</th>
-                <th>Supplier</th>
-            </tr>
-            <tr>
-                <td>Sample</td>
-                <td>Fridge</td>
-                <td> 5.95</td>
-                <td>50</td>
-                <td>lb</td>
-                <td>Cysco</td>
-            </tr>
-        </table>
-
+        <div>
+            @Html.TextBoxFor(model => model.Product_Name, new { @placeholder = "Item Name" })
+        </div>
     </div>
+    <div class="item">
+        <div>
+            @Html.TextBoxFor(model => model.Product_Desc, new { @placeholder = "Item Desc" })
+        </div>
+    </div>
+    <div class="item">
+        <td colspan="2">
+            @Html.DropDownList("catagoryName", "Select a Catagory")
+        </td>
+    </div>
+    <div class="item">
+        <div>
+            @Html.TextBoxFor(model => model.UnitsPerCase, new { @placeholder = "Units Per Case" })
+        </div>
+    </div>
+    <div class="item">
+        <div>
+            @Html.TextBoxFor(model => model.Cases, new { @placeholder = "Case Quantity" })
+        </div>
+    </div>
+    <div class="item">
+        <td colspan="2">
+            @Html.DropDownList("location", "Select a Location")
+        </td>
+    </div>
+    <div class="item">
+        <td colspan="2">
+            @Html.DropDownList("statusName", "Select a Status")
+        </td>
+    </div>
+    @*<div class="item">
+            <td colspan="2">
+                @Html.DropDownList("catagoryName", "Select a Catagory")
+            </td>
+        </div>*@
 </div>
-
-
-    <form action="InitializeEmployees">
-        <input type="submit" value="Next" />
-    </form>
-
-    <form action="HomePage">
-        <input type="submit" value="Cancel" />
-    </form>
+    <div>
+        <button id="btnAddProduct" name="btnSubmit" value="addproduct" class="button-action"><i class="fas fa-user-plus"></i> Add-Product</button>
+    </div>
+}
